# web3games-near-nft

./: .gitignore  Cargo.toml  README.md  build.sh
res/: nft.wasm
src/: lib.rs
