[package]
name = "nft"
version = "1.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = 'https://github.com/web3gamesofficial/near-sdk-rs', branch = 'web3games-mainnet' }
near-contract-standards = { git = 'https://github.com/web3gamesofficial/near-sdk-rs', branch = 'web3games-mainnet' }
